--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 server.port=8081
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
+agora.appId=a7c59463a2dd4476bb1e963d2392b745
+agora.appCertificate=e1cad6248aee4ee8828680ae99be55c6
+agora.expirationTimeInSeconds=3600
